config for CodeSandBox

--- a/package.json
+++ b/package.json
@@ -2,6 +2,6 @@
   "title": "html-includes-with-standard-javacsript",
   "description": "",
   "tags": "",
-  "template": "",
+  "template": "static",
   "main": "index.html"
 }
