--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "parcel build index.html"
   },
   "devDependencies": {
+        "@babel/core": "^7.2.0",
     "parcel-bundler": "^1.6.1"
   }
 }
