--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "parcel index.html --open",
     "build": "parcel build index.html"
   },
+  "dependencies": {},
   "devDependencies": {
         "@babel/core": "^7.2.0",
     "parcel-bundler": "^1.6.1"
