--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {},
   "devDependencies": {
-        "@babel/core": "^7.2.0",
+    "@babel/core": "7.2.0",
     "parcel-bundler": "^1.6.1"
   }
 }
